If name exists display Hello h1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <md-grid-list cols="12">
   <md-grid-tile [colspan]="3" [rowspan]="3">
     <md-card>
+      <md-card-title>Controls:</md-card-title>
       <button (click)="login()">Login</button>
       <button (click)="logout()">Logout</button>
     </md-card>
   </md-grid-tile>
   <md-grid-tile [colspan]="9" [rowspan]="3">
     <md-card>
-      <h1>Hello {{displayName}}</h1>
+      <md-card-title>Details:</md-card-title>
+      <h1 *ngIf="displayName">Hello {{displayName}}</h1>
       <img *ngIf="photoUrl" src="{{photoUrl}}" alt="user_facebook_photo">
     </md-card>
   </md-grid-tile>
